Se corrigio la modificacion de cantidad y los totales, tambien se agregaron los botones de cancelar

--- a/views/empleado.hbs
+++ b/views/empleado.hbs
@@ -1,6 +1,6 @@
 <div id="empleado-header">
     {{>header}}
 <h3>Bienvenido Empleado</h3>
-<a href="/sale" class="btn btn-success">Ventas</a>
+<a href="/sales" class="btn btn-success">Ventas</a>
 </div>
 
