--- a/views/products.hbs
+++ b/views/products.hbs
@@ -33,6 +33,15 @@
     </table>
 </div>
 
+<button type="button" class="btn btn-danger" id="cancel-btn">Cancelar</button>
+
+
+<script>
+    document.getElementById('cancel-btn').addEventListener('click', function () {
+        window.history.back();
+    });
+</script>
+
 <script>
     async function deleteProduct(codigoDeBarras) {
         if (confirm('¿Estás seguro de que deseas eliminar este producto?')) {
