--- a/views/register.hbs
+++ b/views/register.hbs
@@ -14,5 +14,12 @@
         <button type="submit" class="btn btn-primary">Registrar Usuario</button>
     </form>
 </div>
+<button type="button" class="btn btn-danger" id="cancel-btn">Cancelar</button>
 
+
+<script>
+    document.getElementById('cancel-btn').addEventListener('click', function () {
+        window.history.back();
+    });
+</script>
 {{> footer}}
