--- a/views/users.hbs
+++ b/views/users.hbs
@@ -23,6 +23,14 @@
         </tbody>
     </table>
 </div>
+    <button type="button" class="btn btn-danger" id="cancel-btn">Cancelar</button>
+
+
+<script>
+    document.getElementById('cancel-btn').addEventListener('click', function () {
+        window.history.back();
+    });
+</script>
 
 {{> footer}}
 
