--- a/views/home.hbs
+++ b/views/home.hbs
@@ -10,6 +10,6 @@
         <a href="/users" class="btn btn-success">Ver Usuarios</a>
         <a href="/register" class="btn btn-success">Registrar Usuario</a>
     </div>
-    <a href="/sale" class="btn btn-success">Ventas</a>
+    <a href="/sales" class="btn btn-success">Ventas</a>
 </div>
     
