--- a/views/newProduct.hbs
+++ b/views/newProduct.hbs
@@ -23,9 +23,14 @@
             <input type="number" class="form-control" id="precio_venta" name="precio_venta" required>
         </div>
         <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="button" class="btn btn-danger" id="cancel-btn">Cancelar</button>
     </form>
 </div>
 
-
+<script>
+    document.getElementById('cancel-btn').addEventListener('click', function () {
+        window.history.back();
+    });
+</script>
 
 {{>footer}}
