Se creo la caja y se actualizo la confirmacion de ventas y envio a bbdd

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -9,7 +9,12 @@
     <div class="container text-center mt-5">
         <a href="/users" class="btn btn-success">Ver Usuarios</a>
         <a href="/register" class="btn btn-success">Registrar Usuario</a>
+        <button id="abrir-caja-btn" class="btn btn-primary">Abrir Caja</button>
     </div>
     <a href="/sales" class="btn btn-success">Ventas</a>
 </div>
-    
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="/js/abrirCaja.js"></script>
+
+{{>footer}}
