Se agrego pagina viewSalePage para ver las ventas realizadas

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -10,6 +10,7 @@
         <a href="/users" class="btn btn-success">Ver Usuarios</a>
         <a href="/register" class="btn btn-success">Registrar Usuario</a>
         <button id="abrir-caja-btn" class="btn btn-primary">Abrir Caja</button>
+        <a href="/viewSales" class="btn btn-success">Ver Ventas</a>
     </div>
     <a href="/sales" class="btn btn-success">Ventas</a>
 </div>
