Adicion de botones

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,6 +4,7 @@
     <div class="text-center mt-5">
         <a href="/newProduct" class="btn btn-success">Producto Nuevo</a>
         <a href="/products" class="btn btn-success">Productos</a>
+        <a href="/caja" class="btn btn-success">Ver Caja</a>
         <a href="/logout" class="btn btn-danger">Cerrar Sesion</a>
     </div>
     <div class="container text-center mt-5">
