--- a/views/caja.hbs
+++ b/views/caja.hbs
@@ -12,7 +12,7 @@
                     <th>Apertura</th>
                     <th>Total Transferencia</th>
                     <th>Ventas Efectivo</th>
-                    <th>Cierre Parcial</th>
+                    <th>Retiro Parcial</th>
                     <th>Total Dinero en Caja</th>
                 </tr>
             </thead>
@@ -29,7 +29,7 @@
     </div>
 
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cierreParcialModal">
-        Cierre Parcial
+        Retiro Parcial
     </button>
 
     <div class="modal fade" id="cierreParcialModal" tabindex="-1" aria-labelledby="cierreParcialModalLabel"
@@ -55,7 +55,16 @@
         </div>
     </div>
 </div>
+<button type="button" class="btn btn-danger" id="cancel-btn">Ir a ventas</button>
 
+{{!------------------------------------------------ BOTON DE CANCELAR ---------------------}}
+<script>
+    document.getElementById('cancel-btn').addEventListener('click', function () {
+        window.history.back();
+    });
+</script>
+
+{{!------------------------------------------------ SCRIPT DE CIERRE PARCIAL ---------------------}}
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         document.getElementById('cierreParcialForm').addEventListener('submit', async function (e) {
