--- a/views/viewSales.hbs
+++ b/views/viewSales.hbs
@@ -30,12 +30,7 @@
     </table>
 </div>
 
-<button type="button" class="btn btn-danger" id="cancel-btn">Cancelar</button>
+<a href="/sales" class="btn btn-success">Ir a Ventas</a>
 
-<script>
-    document.getElementById('cancel-btn').addEventListener('click', function () {
-        window.history.back();
-    });
-</script>
 
 {{>footer}}
