se quitaron los bug y se corrigio el boton de cerrar modal

--- a/views/sales.hbs
+++ b/views/sales.hbs
@@ -81,8 +81,8 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="productModalLabel">Seleccionar Producto</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">
+                    
                 </button>
             </div>
             <div class="modal-body">
@@ -107,9 +107,16 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+{{!------------------------------------------------ CIERRE DEL MODAL --}}
+<script>
+    $(document).ready(function () {
+        $('.btn-close').click(function () {
+            $('#productModal').modal('hide');
+        });
+    });
+</script>
 
-
-
+{{!-- ------------------------------------------------------------------------------ --}}
 <script>
 
     $(document).on('click', '.seleccionar-producto', function () {
@@ -126,8 +133,7 @@
         $('#precio').val(precio);
         $('#total').val(total);
 
-        // Ocultar el modal
-        $('#productModal').modal('hide');
+        
     });
 
     $(document).ready(function () {
